Closed Bug 1341128 Opened 7 years ago Closed 7 years ago

high level HTTP Channel Success Telemetry

Categories

(Core :: Networking: HTTP, defect)

50 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox52 --- fixed
firefox-esr52 --- fixed
firefox53 --- fixed
firefox54 --- fixed

People

(Reporter: mcmanus, Assigned: mcmanus)

Details

(Whiteboard: [necko-active])

Attachments

(1 file, 2 obsolete files)

we could use general HTTP metric to determine stability - as a canary for unexpected instabilities.

This telemetry should distinguish between HTTP and HTTPS and for each channel that is successfully opened indicate if it goes to the network (or is satisfied from disk), reads any goodput (deciphered TLS or plaintext), and succeeds completely.
as this is a general stability measurement we don't want this probe to expire
Attachment #8839292 - Flags: review?(dd.mozilla)
Assignee: nobody → mcmanus
Status: NEW → ASSIGNED
Attachment #8839292 - Flags: feedback?(ekr)
Comment on attachment 8839292 [details] [diff] [review]
high level HTTP Channel Success Telemetry

Review of attachment 8839292 [details] [diff] [review]:
-----------------------------------------------------------------

Generally LGTM

::: toolkit/components/telemetry/Histograms.json
@@ +2358,5 @@
> +    "expires_in_version": "never",
> +    "kind": "enumerated",
> +    "n_values": 16,
> +    "description": "Channel Disposition: 0=Cancel, 1=Disk, 2=NetOK, 3=NetEarlyFail, 4=NetlateFail, +5 for HTTPS"
> +  },

Can we make this opt-out?

Rather than +5, can we instead do 0-7, 8-15. That will give us a tiny bit of room for extension
Attachment #8839292 - Flags: feedback?(ekr) → feedback+
wdym opt-out in this circumstance?
(In reply to Eric Rescorla (:ekr) from comment #6)
> You can set histograms to be opt-out. See:
> http://searchfox.org/mozilla-central/source/toolkit/components/telemetry/
> Histograms.json#8682

whoa. things i learned today. thx.

that seems appropriate here - I'll add it.
Attachment #8839320 - Flags: review?(dd.mozilla)
Attachment #8839292 - Attachment is obsolete: true
Attachment #8839292 - Flags: review?(dd.mozilla)
Attachment #8839320 - Flags: review?(benjamin)
Attachment #8839320 - Flags: review?(dd.mozilla) → review+
Whiteboard: [necko-active]
Attachment #8839695 - Attachment is obsolete: true
Comment on attachment 8839320 [details] [diff] [review]
high level HTTP Channel Success Telemetry

Can you please start this out expiring in 6 months, Firefox 60? That way you can learn the shape of the data, how noisy it is, and work out what kind of long-term value it will likely provide. I can see how this has a lot of potential long-term value, but without experience collecting it we don't know enough that it will definitely provide that value.

data-r=me with that change
Attachment #8839320 - Flags: review?(benjamin) → review+
thanks - its reasonable to consider this for renewal later.
Comment on attachment 8839320 [details] [diff] [review]
high level HTTP Channel Success Telemetry

This is part of a set of probes to measure TLS success/failure, as discussed in e-mail/IRC.

Approval Request Comment
[Feature/Bug causing the regression]: N/A
[User impact if declined]: Inferior reporting of HTTP success/failure
with potential slippage of TLS 1.3 ship.
[Is this code covered by automated tests?]: It runs but no tests
for accuracy.
[Has the fix been verified in Nightly?]: Locally and sat in Nightly w/o signs of breakage
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: No
[Why is the change risky/not risky?]: Simple change to a telemetry
probe without user-affecting impact.
[String changes made/needed]:
Attachment #8839320 - Flags: approval-mozilla-beta?
Attachment #8839320 - Flags: approval-mozilla-aurora?
https://hg.mozilla.org/mozilla-central/rev/8128e71288af
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Comment on attachment 8839320 [details] [diff] [review]
high level HTTP Channel Success Telemetry

telemetry for http channel, aurora53+/beta52+
Attachment #8839320 - Flags: approval-mozilla-beta?
Attachment #8839320 - Flags: approval-mozilla-beta+
Attachment #8839320 - Flags: approval-mozilla-aurora?
Attachment #8839320 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.