Bug 1341128 - High level HTTP Channel Success Telemetry. r=dragana, r=bsmedberg, a=jcristau